# movie_night_web

./: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  app.py  config.py  database.py  docker-compose.yml  init_db.py  models.py  pyproject.toml  roll_logic.py  sheets_integration.py  tmdb_integration.py
.github/workflows/: docker-build.yml
static/css/: style.css
static/js/: history.js  main.js  roll.js  seasons.js
templates/: 404.html  500.html  base.html  history.html  index.html  seasons.html
